packages/transpiler/test/fixtures/errors/array-destructuring-non-tuple/input.ts
/**
 * @public
 */
export class ArrayDestructuringNonTuple {
    public head(items: number[]): number {
        const [first] = items;
        return first;
    }
}
